; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libiconv_modules/MSKanji/extr_citrus_mskanji.c__citrus_MSKanji_encoding_module_init.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libiconv_modules/MSKanji/extr_citrus_mskanji.c__citrus_MSKanji_encoding_module_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@JIS2004 = common dso_local global i32 0, align 4
@MODE_JIS2004 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i8*, i64)* @_citrus_MSKanji_encoding_module_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @_citrus_MSKanji_encoding_module_init(%struct.TYPE_3__* noalias %0, i8* noalias %1, i64 %2) #0 {
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i8*, i8** %5, align 8
  store i8* %8, i8** %7, align 8
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %10 = bitcast %struct.TYPE_3__* %9 to i8*
  %11 = call i32 @memset(i8* %10, i32 0, i32 4)
  br label %12

12:                                               ; preds = %27, %3
  %13 = load i64, i64* %6, align 8
  %14 = icmp ugt i64 %13, 0
  br i1 %14, label %15, label %32

15:                                               ; preds = %12
  %16 = load i8*, i8** %7, align 8
  %17 = load i8, i8* %16, align 1
  %18 = call i32 @_bcs_toupper(i8 signext %17)
  switch i32 %18, label %27 [
    i32 74, label %19
  ]

19:                                               ; preds = %15
  %20 = load i32, i32* @JIS2004, align 4
  %21 = load i32, i32* @MODE_JIS2004, align 4
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = or i32 %24, %21
  store i32 %25, i32* %23, align 4
  %26 = call i32 @MATCH(i32 %20, i32 %25)
  br label %27

27:                                               ; preds = %15, %19
  %28 = load i8*, i8** %7, align 8
  %29 = getelementptr inbounds i8, i8* %28, i32 1
  store i8* %29, i8** %7, align 8
  %30 = load i64, i64* %6, align 8
  %31 = add i64 %30, -1
  store i64 %31, i64* %6, align 8
  br label %12

32:                                               ; preds = %12
  ret i32 0
}

declare dso_local i32 @memset(i8*, i32, i32) #1

declare dso_local i32 @_bcs_toupper(i8 signext) #1

declare dso_local i32 @MATCH(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
